Fix bug of content overlapping

--- a/odin-cv-app/src/styles/Accordion.scss
+++ b/odin-cv-app/src/styles/Accordion.scss
@@ -60,12 +60,14 @@ $shadow: 0px 1px 1px rgba(51, 51, 51, 0.6);
     transform: translateY(-20px);
     transform-origin: top;
     transition: transform 150ms ease-in-out, opacity 150ms ease-in-out,
-      max-height 150ms ease-in;
+      max-height 150ms ease-in, visibility 150ms;
+    visibility: hidden;
 
     &.open {
       transform: translateY(0);
       opacity: 1;
       max-height: 100vh;
+      visibility: visible;
     }
   }
 }
